@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was crashing
 
+Jan 15, 2001
+	fix Surface.get_at() for 24bit surfaces
+	big endian cleanups for surfarray
 
 Jan 8, 2001
 	more warning cleanups
